@@ -34,6 +34,7 @@
 - New command line option --cropWidth. Helps to crop unused width of paper.
 - New feature Pattern Messages.
 - [#984] Special variable "CurrentLength" for tools Cut Arc, Cut Spline and Cut Spline Path.
+- Added a ruler at the bottom of a tiled PDF document.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
